# dirbase

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  README.md  build.rs  deny.toml  package.json  rustfmt.toml
.githooks/: pre-commit
.github/actions/setup-project/: action.yml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  dependency-security.yml  rust-clippy.yml  rust-fmt.yml  rust-test.yml  rust-to-bun.yml  rust-to-npm.yml  ui-test.yml
benchmarks/: .gitignore  README.md  comparison.md  pokeapi-benchmark.md  school.json
benchmarks/results/: benchmark-report-20260416-132335.md  benchmark-report-20260416-132545.md  pokeapi-report-20260314-180054.md  pokeapi-report-20260318-092447.md  pokeapi-report-20260318-094353.md  pokeapi-report-20260318-094850.md  pokeapi-report-20260318-095324.md  pokeapi-report-20260318-095736.md  pokeapi-report-20260318-100219.md  pokeapi-report-20260318-101753.md  suite-report-20260318-082436.md  suite-report-20260416-112459.md  suite-report-20260416-112544.md
docs/: development.md
docs/testing/: coverage.md  test-matrix.json
examples/: README.md
examples/school/: classes.json  enrollments.json  professors.json  schema.json  students.json
js/: esbuild.config.mjs  package-lock.json  package.json
js/scripts/: clean-package-output.mjs  copy-rust-binary.mjs
js/src/: cli.ts  index.test.ts  index.ts
scripts/: benchmark_pokeapi.sh  benchmark_vs_json_server.sh  build_benchmark_data.py  build_pokeapi_json.py  check_repo_hygiene.sh  render_benchmark_report.py  render_pokeapi_benchmark_report.py  render_test_matrix.py  run_repo_tests.sh  run_tests_and_benchmark.py
src/: app.rs  cli.rs  error.rs  handlers.rs  main.rs  main_config_file_test.rs  main_startup_output_test.rs  mutation_service.rs  mutation_service_test.rs  relations.rs  resources.rs  schema.rs  schema_endpoints_test.rs  state.rs  storage.rs  watcher.rs  watcher_behavior_test.rs
src/graphql/: graphql_queries_test.rs  mod.rs
src/http/: empty_folder_overview_test.rs  html.rs  mod.rs  overview.rs  overview_endpoints_test.rs  response_format.rs  retrieval_and_query_params_test.rs  root_html_overview_test.rs  routes.rs  routes_and_logging_test.rs  xml_mode_test.rs
src/query/: filter_collection_query_test.rs  filters.rs
src/schema/: infer.rs  merge.rs  parse_dbml.rs  parse_json.rs  parse_xsd.rs  relations.rs  tests.rs  types.rs  validation.rs
src/sql/: mod.rs  sql_and_export_endpoints_test.rs  sql_query_test.rs
src/storage/: file_input_mode_test.rs  index.rs  io.rs  validation.rs
tests/: cli_help.rs  config_file.rs  crud_operations.rs  empty_folder_overview.rs  file_input_mode.rs  filter_collection_query.rs  graphql_queries.rs  overview_endpoints.rs  person_resource.rs  retrieval_and_query_params.rs  root_html_overview.rs  routes_and_logging.rs  schema_endpoints.rs  sql_and_export_endpoints.rs  sql_query.rs  startup_output.rs  watcher_behavior.rs  xml_mode.rs
tests/fixtures/: person.json
tests/support/: mod.rs
ui/: esbuild.config.mjs  package-lock.json  package.json  playwright.config.cjs  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
ui/coverage/: clover.xml  coverage-final.json  index.html
ui/coverage/src/: api.ts.html  helpers.ts.html  index.html  overviewUtils.ts.html  (+3 more)
ui/e2e/: overview.spec.cjs  overview.spec.ts  schema.spec.cjs  schema.spec.ts
ui/src/: OverviewApp.tsx  api.test.ts  api.ts  helpers.test.ts  helpers.ts  main.tsx  overviewComponents.test.tsx  overviewUtils.test.ts  overviewUtils.ts  schemaEditor.test.ts  schemaEditor.ts  schemaWorkspace.test.ts  schemaWorkspace.ts  setupTests.ts  styles.css  tailwind.generated.css  types.ts  urlState.test.ts  urlState.ts
(+37 files in other folders)
