[package]
name = "folder-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
notify = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.53"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
fake = "2.10"
tempfile = "3.19"
tower = { version = "0.5", features = ["util"] }
