[package]
name = "dirbase"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-graphql = { version = "7.0.17", default-features = false, features = ["dynamic-schema", "graphiql"] }
async-graphql-axum = "7.0.17"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
notify = "8.0"
regex = "1.11"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.53"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
fs2 = "0.4"
uuid = "1.16"

[dev-dependencies]
fake = "2.10"
tempfile = "3.19"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "cli_help"
path = "src/main_cli_help_test.rs"

[[test]]
name = "config_file"
path = "src/main_config_file_test.rs"

[[test]]
name = "crud_operations"
path = "src/mutation_service_test.rs"

[[test]]
name = "empty_folder_overview"
path = "src/http/empty_folder_overview_test.rs"

[[test]]
name = "file_input_mode"
path = "src/storage/file_input_mode_test.rs"

[[test]]
name = "filter_collection_query"
path = "src/query/filter_collection_query_test.rs"

[[test]]
name = "graphql_queries"
path = "src/graphql/graphql_queries_test.rs"

[[test]]
name = "overview_endpoints"
path = "src/http/overview_endpoints_test.rs"

[[test]]
name = "retrieval_and_query_params"
path = "src/http/retrieval_and_query_params_test.rs"

[[test]]
name = "root_html_overview"
path = "src/http/root_html_overview_test.rs"

[[test]]
name = "routes_and_logging"
path = "src/http/routes_and_logging_test.rs"

[[test]]
name = "schema_endpoints"
path = "src/schema_endpoints_test.rs"

[[test]]
name = "sql_and_export_endpoints"
path = "src/sql/sql_and_export_endpoints_test.rs"

[[test]]
name = "sql_query"
path = "src/sql/sql_query_test.rs"

[[test]]
name = "startup_output"
path = "src/main_startup_output_test.rs"

[[test]]
name = "watcher_behavior"
path = "src/watcher_behavior_test.rs"

[[test]]
name = "xml_mode"
path = "src/http/xml_mode_test.rs"
